--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 name: "김동훈"
 title: "Donghun's Blog"
 description: "React로 닿길 원하는 개발자, 김동훈입니다 🌏"
-logo: "assets/images/Donghun.jpeg"
-favicon: "assets/images/Donghun.jpeg"
+logo: "assets/images/Donghun.png"
+favicon: "assets/images/Donghun.png"
 baseurl: ""
 url: "https://rlaehdgns217.github.io/"
 google_analytics: "UA-xxxxxxxx-1"
